SDK заменен на более новый

--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "com.k0fe.yandexgamessdk": "file:C:/Users/асус/Desktop/yandex-games-plugin-unity-master/yandex-games-plugin-unity-master",
     "com.unity.2d.animation": "5.2.0",
     "com.unity.2d.pixel-perfect": "4.0.1",
     "com.unity.2d.psdimporter": "4.3.0",
